--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -44,12 +44,40 @@
         {% endblock %}
     </head>
     <body class="{{ pageType }}">
+        {# Due to https://bugs.webkit.org/show_bug.cgi?id=127102 we need to access the SVG filter from an embedded SVG
+        instead of an external one. #}
+        {% include "svg/filters.svg" %}
+        {% uioTemplate %}
         {% include "partials/global/header.njk" %}
         <main>
             {% block content %}
             {% endblock content %}
         </main>
         {% include "partials/global/footer.njk" %}
+        <script>
+            fluid.uiOptions(".flc-prefsEditor-separatedPanel", {
+                preferences: [
+                    "fluid.prefs.lineSpace",
+                    "fluid.prefs.textFont",
+                    "fluid.prefs.contrast",
+                    "fluid.prefs.enhanceInputs",
+                    "fluid.prefs.syllabification"
+                ],
+                auxiliarySchema: {
+                    terms: {
+                        templatePrefix: "/lib/infusion/src/framework/preferences/html",
+                        messagePrefix: "/lib/infusion/src/framework/preferences/messages"
+                    },
+                    "fluid.prefs.syllabification": {
+                        enactor: {
+                            terms: {
+                                patternPrefix: "/lib/infusion/src/lib/hypher/patterns"
+                            }
+                        }
+                    }
+                }
+            });
+        </script>
         <script src="https://identity.netlify.com/v1/netlify-identity-widget.js" defer></script>
     </body>
 </html>
