--- a/src/assets/styles/abstracts/_mixins.scss
+++ b/src/assets/styles/abstracts/_mixins.scss
@@ -2,87 +2,75 @@
 // This file contains all application-wide Sass mixins.
 // -----------------------------------------------------------------------------
 @mixin visually-hidden {
-  border-width: 0;
-  clip: rect(0, 0, 0, 0);
-  height: rem(1);
-  margin: rem(-1);
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  white-space: nowrap;
-  width: rem(1);
+	border-width: 0;
+	clip: rect(0, 0, 0, 0);
+	height: rem(1);
+	margin: rem(-1);
+	overflow: hidden;
+	padding: 0;
+	position: absolute;
+	white-space: nowrap;
+	width: rem(1);
 }
 
 @mixin breakpoint-up($name, $breakpoints: $breakpoints) {
-  $min: breakpoint-min($name, $breakpoints);
+	$min: breakpoint-min($name, $breakpoints);
 
-  @if $min {
-    @media (min-width: rem($min)) {
-      @content;
-    }
-  }
-
-  @else {
-    @content;
-  }
+	@if $min {
+		@media (min-width: rem($min)) {
+			@content;
+		}
+	} @else {
+		@content;
+	}
 }
 
 @mixin breakpoint-down($name, $breakpoints: $breakpoints) {
-  $max: breakpoint-max($name, $breakpoints);
+	$max: breakpoint-max($name, $breakpoints);
 
-  @if $max {
-    @media (max-width: rem($max)) {
-      @content;
-    }
-  }
-
-  @else {
-    @content;
-  }
+	@if $max {
+		@media (max-width: rem($max)) {
+			@content;
+		}
+	} @else {
+		@content;
+	}
 }
 
 @mixin breakpoint-between($lower, $upper, $breakpoints: $breakpoints) {
-  $min: breakpoint-min($lower, $breakpoints);
-  $max: breakpoint-max($upper, $breakpoints);
+	$min: breakpoint-min($lower, $breakpoints);
+	$max: breakpoint-max($upper, $breakpoints);
 
-  @if $min != null and $max != null {
-    @media (min-width: rem($min)) and (max-width: rem($max)) {
-      @content;
-    }
-  }
-
-  @else if $max == null {
-    @include media-breakpoint-up($lower, $breakpoints) {
-      @content;
-    }
-  }
-
-  @else if $min == null {
-    @include media-breakpoint-down($upper, $breakpoints) {
-      @content;
-    }
-  }
+	@if $min != null and $max != null {
+		@media (min-width: rem($min)) and (max-width: rem($max)) {
+			@content;
+		}
+	} @else if $max == null {
+		@include media-breakpoint-up($lower, $breakpoints) {
+			@content;
+		}
+	} @else if $min == null {
+		@include media-breakpoint-down($upper, $breakpoints) {
+			@content;
+		}
+	}
 }
 
 @mixin breakpoint-only($name, $breakpoints: $breakpoints) {
-  $min: breakpoint-min($name, $breakpoints);
-  $max: breakpoint-max($name, $breakpoints);
+	$min: breakpoint-min($name, $breakpoints);
+	$max: breakpoint-max($name, $breakpoints);
 
-  @if $min != null and $max != null {
-    @media (min-width: rem($min)) and (max-width: rem($max)) {
-      @content;
-    }
-  }
-
-  @else if $max == null {
-    @include media-breakpoint-up($name, $breakpoints) {
-      @content;
-    }
-  }
-
-  @else if $min == null {
-    @include media-breakpoint-down($name, $breakpoints) {
-      @content;
-    }
-  }
+	@if $min != null and $max != null {
+		@media (min-width: rem($min)) and (max-width: rem($max)) {
+			@content;
+		}
+	} @else if $max == null {
+		@include media-breakpoint-up($name, $breakpoints) {
+			@content;
+		}
+	} @else if $min == null {
+		@include media-breakpoint-down($name, $breakpoints) {
+			@content;
+		}
+	}
 }
