--- a/src/assets/styles/pages/_home.scss
+++ b/src/assets/styles/pages/_home.scss
@@ -1,55 +1,61 @@
 // -----------------------------------------------------------------------------
 // This file contains styles that are specific to the home page.
 // -----------------------------------------------------------------------------
-
 #what-is-inclusive-design {
-  .section__content {
-    padding: rem(128) 0 0;
-    position: relative;
+	.section__content {
+		padding: rem(128) 0 0;
+		position: relative;
 
-    > * {
-      position: relative;
-      z-index: 10;
-    }
+		> * {
+			position: relative;
+			z-index: 10;
+		}
 
-    &::before {
-      background: radial-gradient(50% 50% at 50% 50%, var(--fl-fgColor, $white) 0%, var(--fl-bgColor, rgba(255, 255, 255, 0) 100%)) no-repeat 50% 50% / 100% 100%;
-      content: "";
-      display: block;
-      height: rem(640);
-      left: rem(-80);
-      mask-image: url('../images/scatterplot.svg');
-      mask-position: center;
-      mask-repeat: no-repeat;
-      mask-size: rem(640);
-      position: absolute;
-      top: rem(-240);
-      width: 100vw;
-    }
-  }
+		&::before {
+			background:
+				radial-gradient(
+					50% 50% at 50% 50%,
+					var(--fl-fgColor, $white) 0%,
+					var(--fl-bgColor, rgb(255 255 255 / 0%) 100%)
+				)
+				no-repeat
+				50% 50% / 100% 100%;
+			content: "";
+			display: block;
+			height: rem(640);
+			left: rem(-80);
+			mask-image: url("../images/scatterplot.svg");
+			mask-position: center;
+			mask-repeat: no-repeat;
+			mask-size: rem(640);
+			position: absolute;
+			top: rem(-240);
+			width: 100vw;
+		}
+	}
 }
 
 #featured-projects-and-tools {
-  z-index: 1;
+	z-index: 1;
 }
 
 .page--home .entry + .entry {
-  margin-top: rem(24);
+	margin-top: rem(24);
 }
 
 @include breakpoint-up(md) {
-  #what-is-inclusive-design {
-    .section__content {
-      padding-left: calc(50% + (var(--gutter) / 2));
-      padding-top: 0;
+	#what-is-inclusive-design {
+		.section__content {
+			padding-left: calc(50% + (var(--gutter) / 2));
+			padding-top: 0;
 
-      &::before {
-        height: rem(896);
-        left: -14vw;
-        mask-size: rem(896);
-        top: rem(-256);
-        width: rem(896);
-      }
-    }
-  }
+			&::before {
+				height: rem(896);
+				left: -14vw;
+				mask-size: rem(896);
+				top: rem(-256);
+				width: rem(896);
+			}
+		}
+	}
 }
