--- a/src/assets/styles/abstracts/_functions.scss
+++ b/src/assets/styles/abstracts/_functions.scss
@@ -1,9 +1,9 @@
 // -----------------------------------------------------------------------------
 // This file contains all application-wide Sass functions.
 // -----------------------------------------------------------------------------
-@use "sass:list";
-@use "sass:map";
-@use "sass:math";
+@use 'sass:list';
+@use 'sass:map';
+@use 'sass:math';
 
 @function rem($size) {
   $rem: math.div($size, 16);
@@ -19,7 +19,7 @@
   $n: list.index($breakpoint-names, $name);
 
   @if not $n {
-    @error "Breakpoint `#{$name}` not found in `#{$breakpoints}`.";
+    @error 'Breakpoint `#{$name}` not found in `#{$breakpoints}`.';
   }
 
   @return if(
