--- a/src/assets/styles/abstracts/_grid.scss
+++ b/src/assets/styles/abstracts/_grid.scss
@@ -1,4 +1,4 @@
-@use "sass:color";
+@use 'sass:color';
 
 :root {
   --offset: calc(30 / 16 * 1rem);
@@ -34,7 +34,7 @@ html.grid::before {
   background-image: var(--background-columns);
   background-size: var(--background-width) 100%;
   bottom: 0;
-  content: "";
+  content: '';
   left: 0;
   margin-left: auto;
   margin-right: auto;
