--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -18,7 +18,7 @@
   &::after {
     background: inherit;
     bottom: -1px;
-    content: "";
+    content: '';
     display: block;
     height: calc(1px + 100%);
     margin-left: 50%;
