--- a/src/assets/styles/base/_fonts.scss
+++ b/src/assets/styles/base/_fonts.scss
@@ -1,10 +1,9 @@
 // -----------------------------------------------------------------------------
 // This file contains all @font-face declarations, if any.
 // -----------------------------------------------------------------------------
-
 @font-face {
   font-display: swap;
-  font-family: 'Merriweather';
+  font-family: Merriweather;
   font-style: normal;
   font-weight: 900;
   src:
