--- a/src/assets/styles/pages/_team.scss
+++ b/src/assets/styles/pages/_team.scss
@@ -1,4 +1,3 @@
-
 .page--team {
   .person {
     border-top: rem(4) solid var(--fl-fgColor, var(--indigo-500));
@@ -31,7 +30,7 @@
       margin-right: rem(4);
 
       path {
-        fill: currentColor;
+        fill: currentcolor;
       }
     }
   }
