--- a/src/assets/styles/abstracts/_mixins.scss
+++ b/src/assets/styles/abstracts/_mixins.scss
@@ -20,9 +20,7 @@
     @media (min-width: rem($min)) {
       @content;
     }
-  }
-
-  @else {
+  } @else {
     @content;
   }
 }
@@ -34,9 +32,7 @@
     @media (max-width: rem($max)) {
       @content;
     }
-  }
-
-  @else {
+  } @else {
     @content;
   }
 }
@@ -49,15 +45,11 @@
     @media (min-width: rem($min)) and (max-width: rem($max)) {
       @content;
     }
-  }
-
-  @else if $max == null {
+  } @else if $max == null {
     @include media-breakpoint-up($lower, $breakpoints) {
       @content;
     }
-  }
-
-  @else if $min == null {
+  } @else if $min == null {
     @include media-breakpoint-down($upper, $breakpoints) {
       @content;
     }
@@ -72,15 +64,11 @@
     @media (min-width: rem($min)) and (max-width: rem($max)) {
       @content;
     }
-  }
-
-  @else if $max == null {
+  } @else if $max == null {
     @include media-breakpoint-up($name, $breakpoints) {
       @content;
     }
-  }
-
-  @else if $min == null {
+  } @else if $min == null {
     @include media-breakpoint-down($name, $breakpoints) {
       @content;
     }
