--- a/src/assets/styles/components/_brand.scss
+++ b/src/assets/styles/components/_brand.scss
@@ -1,3 +1,5 @@
+@use 'sass:color';
+
 .brand {
   color: var(--fl-linkColor, inherit);
   height: rem(80);
@@ -13,13 +15,13 @@
   }
 
   &:active {
-    background: var(--fl-linkColor, transparentize(black, 0.3));
+    background: var(--fl-linkColor, color.adjust(black, $alpha: -0.3));
     color: var(--fl-bgColor);
   }
 }
 
 .brand svg {
-  fill: currentColor;
+  fill: currentcolor;
   margin-left: rem(18);
   width: rem(40);
 }
@@ -46,7 +48,7 @@
     }
 
     &:active {
-      background: var(--fl-linkColor, transparentize($blue-500, 0.3));
+      background: var(--fl-linkColor, color.adjust($blue-500, $alpha: -0.3));
       color: var(--fl-bgColor);
     }
   }
