GH-459: improve the preview contents at authoring

--- a/src/admin/admin.njk
+++ b/src/admin/admin.njk
@@ -12,11 +12,15 @@ permalink: '/admin/index.html'
 <body>
   <!-- Include the script that builds the page and powers Netlify CMS -->
   <script src="https://cdn.jsdelivr.net/npm/netlify-cms@2.10.192/dist/netlify-cms.js" integrity="sha256-Zh4YWc/jM51bs4TkmlBgSOTVk7aUoR7IwKuCJrsLe4w=" crossorigin="anonymous"></script>
+  {% if global.context == "production" %}
+  <script src="https://cdn.jsdelivr.net/npm/react@16.14.0/umd/react.production.min.js" integrity="sha256-XO+TZ9K8q6JbdNIODhOdLPkA6RI+X94mEBruf0D2tc8=" crossorigin="anonymous"></script>
+  {% else %}
+  <script src="https://cdn.jsdelivr.net/npm/react@16.14.0/umd/react.development.js" integrity="sha256-db9g8+oOPLzb3syQLuuEK2y+OduOYvH6f5GnVdUdAgw=" crossorigin="anonymous"></script>
+  {% endif %}
   <script src="https://cdn.jsdelivr.net/npm/prop-types@15.8.1/prop-types.min.js" integrity="sha256-5lNHGrqCR4au5dzhvLWobtMMhRjTRtKs4EYKVjOpy9s=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/nunjucks@3.2.3/browser/nunjucks-slim.min.js" integrity="sha256-sF3DVE/zfImpeam2xPb1Qg8qfXksKN0UukMg0uriPaE=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@babel/standalone@7.19.6/babel.min.js" integrity="sha256-LkP2iwpaTHvTeByi0GTpEdqKoRuqGZwwgFhJxRqIo24=" crossorigin="anonymous"></script>  <script src="/admin/util.js"></script>
   <script src="/admin/templates.js"></script>
-  <script src="/admin/previews.js" type="text/babel"></script>
+  <script src="/admin/previews.js"></script>
   <script>
     CMS.registerPreviewStyle('/assets/styles/app.css')
   </script>
