GH-426: allow projects to have individual pages with subpages

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -35,6 +35,7 @@
   'pages/home',
   'pages/history',
   'pages/projects-tools',
+  'pages/project',
   'pages/news-ideas',
   'pages/single',
   'pages/team',
