--- a/src/_includes/layouts/projects.njk
+++ b/src/_includes/layouts/projects.njk
@@ -17,7 +17,7 @@
                     <div class="projects">
                         {% for project in collections.projects %}
                         <div class="project">
-                            <h3>{{ project.data.title }}{{ " (" + project.data.shortName + ")" if project.data.shortName }}</h3>
+                            <h3><a href="{{project.url}}">{{ project.data.title }}{{ " (" + project.data.shortName + ")" if project.data.shortName }}</a></h3>
                             {{ project.data.description | markdown | safe }}
                             {% if project.data.tags.length > 0 %}
                             <p class="tags">
